# lp_lista_2

./: CMakeLists.txt
docs/: main.cpp  min_comp.cpp
docs/entregue/entregue/: bsearch_int.cpp  bsearch_student.cpp  exemplo_ptr_funcao.cpp
docs/entregue/entregue/prj_filter_v1/: .README.md.swp  README.md
docs/entregue/entregue/prj_filter_v1/src/: drive_filter.cpp
docs/exe/: .bbusca.cpp.swp  bbusca.cpp  busca
docs/ptr_func/include/: filter.h
docs/ptr_func/src/: app.cpp  filter.cpp
include/: .graal.h.swp
src/: .graal.cpp.swp  ;  a.out  graal.cpp  graal.h  main.cpp
test/: main.cpp
